<resources>
    <string name="app_name">遛遛兔</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="modify">修改</string>
    <string name="confirm_register">输入字母或数字，注册后不可修改</string>
    <string name="account_length">账号长度不能小于4位</string>
    <string name="pwd_length">密码长度不能小于6位</string>
    <string name="tips">提示</string>
    <string name="is_save">是否保存已更改的信息?</string>
    <string name="setup">设置</string>
    <string name="save">保存</string>
    <string name="load_more_text">正在加载...</string>
    <string name="is_clear_cache">清除缓存中..</string>
    <string name="clear_cachee">清除缓存</string>
    <string name="parse_error">解析错误</string>
    <string name="connection_failed">连接失败</string>
    <string name="no_connection_server">没有连接服务器</string>
    <string name="other_connection_server_errors">其他连接服务器错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="scan_tips">\"将二维码图片对准扫描框即可自动扫描\"</string>
    <string name="type">类型：</string>
    <string name="type_">类型</string>
    <string name="account">账号：</string>
    <string name="pwd">密码：</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="register_new">新用户注册</string>
    <string name="tourist">游客进入</string>
    <string name="forget_pwd_">忘记密码？</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="password_retrieval">找回密码</string>
    <string name="name">名称：</string>
    <string name="head_portrait">头像</string>
    <string name="seat_portrait">座位头像</string>
    <string name="detail_address">详细地址：</string>
    <string name="detail_address_not">详细地址：</string>
    <string name="profile">公司简介：</string>
    <string name="phone_number">手机号码：</string>
    <string name="phone">手机号码</string>
    <string name="contancts_number">联系电话：</string>
    <string name="gender">性别：</string>
    <string name="update_password">修改密码</string>
    <string name="persional_main">公司网址</string>
    <string name="verification_code">验证码：</string>
    <string name="query_code">获取验证码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="new_pwd">新密码 : </string>
    <string name="sms_login">短信验证登陆</string>
    <string name="country_region">国家/地区：</string>
    <string name="region">地区：</string>
    <string name="submit">提交</string>
    <string name="account_empty">账号不能为空</string>
    <string name="nickname_empty">呢称不能为空</string>
    <string name="region_empty">地区不能为空</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="not_phone">不是正确的手机号</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="new_pwd_empty">新密码不能为空</string>
    <string name="verify_success">验证成功</string>
    <string name="pwd_inconsistent">两次密码输入不一致</string>
    <string name="type_empty">类别不能为空</string>
    <string name="please_enter_phone">请先输入手机号</string>
    <string name="send_success">发送成功，请注意查收</string>
    <string name="logut_success">登出成功</string>
    <string name="logut">退出登陆</string>
    <string name="update_success">修改成功</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <!--主页-->
    <string name="message">消息</string>
    <string name="contacts">联系人</string>
    <string name="dynamic">微讯</string>
    <string name="application">应用</string>
    <string name="perional">我</string>
    <string name="mypage">信息中心</string>
    <string name="perional_data">公司信息</string>
    <string name="detail_info">公司详细信息</string>
    <string name="watch_more">查看更多》</string>
    <string name="send_message">发消息</string>
    <string name="video_chat">视频聊天</string>
    <string name="select_avatar">选择头像</string>
    <string name="upload_pictures">上传图片中</string>
    <string name="please_update_pictures">请先更改图片</string>
    <string name="upload_failed">上传图片失败</string>
    <string name="clipping_error">裁剪出错</string>


    <!--选择头像-->
    <string name="refused_one">您已经拒绝过一次</string>
    <string name="not_sd">设备没有SD卡</string>
    <string name="cancelled_photo">取消了拍照</string>
    <string name="please_turn_camera">请允许打开相机</string>
    <string name="please_turn_sd">请打开允许操作SDCard</string>
    <string name="photograph">拍照</string>
    <string name="select_album">从手机相册选择</string>
    <string name="save_picture">保存图片</string>
    <string name="no_term_list">没有选择展会</string>
    <string name="student_seat_information">中国展会信息</string>
    <string name="number">展位：</string>

    <string name="other">其它</string>
    <string name="please_choose_classroom">请先选择楼间</string>
    <string name="please_choose_school">请先选择会展中心</string>
    <string name="postal_code">邮政编码</string>
    <string name="past">往期》</string>
    <string name="home_page">主页</string>
    <string name="homepage">首期</string>
    <string name="location_address">定位到的位置</string>
    <string name="whole">全部</string>
    <string name="city">城市</string>
    <string name="school">会展中心</string>
    <string name="school_">会展中心：</string>
    <string name="province">省份</string>
    <string name="student">公司</string>
    <string name="shop">店铺</string>
    <string name="average_user">个人</string>
    <string name="reset_successfully">重置成功</string>
    <string name="later_regain">s后重新获取</string>
    <string name="return_login">返回首页并登录</string>
    <string name="search_page_musu_be_1">搜索页数必须大于1</string>
    <string name="search_page_too_big">搜索页数大于最大页数，请重新输入</string>


    <!--后期添加-->
    <string name="exhibition_list">展会列表</string>
    <string name="exhibition_system">展会信息系统</string>
    <string name="liuliu_shop">遛遛商城</string>
    <string name="garment_mall">服装商城</string>
    <string name="youku">优酷视频</string>
    <string name="first_page">当前已是第一页</string>
    <string name="last_page">当前已是最后一页</string>
    <string name="build_room">楼间</string>
    <string name="build_floor">楼层</string>
    <string name="cantact_manager">请联系遛遛兔管理员更改密码 \n\n 官网地址：www.liuliut.com</string>
    <string name="unsignal">您尚未登陆,请先登陆</string>
    <string name="const_przie">普通抽奖</string>
    <string name="miaob_przie">秒爆抽奖</string>
    <string name="add_success">添加成功</string>
    <string name="myprize">我的奖品</string>
    <string name="mygift">我的礼品</string>
    <string name="mycard">我的名片</string>
    <string name="myshoppr">我的店铺奖品</string>
    <string name="myshopmb">我的店铺秒爆商品</string>
    <string name="myshopcp">我的店铺打折优惠商品</string>
    <string name="more">查看更多</string>

    <!--店铺模块-->
    <string name="shop_address">店铺地址：</string>
    <string name="miaob_sales">秒爆促销</string>
    <string name="przie_sales">抽奖活动</string>
    <string name="coupon">打折优惠</string>
    <string name="opening_time">营业时间：</string>
    <string name="shop_stat">营业状态：</string>
    <string name="store_shop">收藏店铺</string>
    <string name="near_shop">附近店铺</string>
    <string name="miaob_shop">秒爆店铺</string>
    <string name="przie_shop">抽奖店铺</string>
    <string name="coupon_shop">打折店铺</string>
    <string name="album_shop">店铺相册</string>
    <string name="cat_shop">行业类别</string>
    <string name="shop_intro">店铺介绍</string>
    <string name="shop_destroy">注销账号(不可恢复)</string>


</resources>
