<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/denglu_img_beijing"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/a_678"
        android:layout_height="@dimen/a_220"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/a_200"
        android:src="@mipmap/denglu_img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_66"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_30"
        android:background="@color/player_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/a_14"
            android:text="@string/type"
            android:textSize="@dimen/t_32" />

        <com.arabbit.view.spinner.widget.CustomSpinner
            android:id="@+id/cp_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/player_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/a_14"
                android:text="@string/account"
                android:textSize="@dimen/t_32" />

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:background="@null"
                android:drawablePadding="@dimen/a_30"
                android:hint=""
                android:padding="@dimen/a_10"
                android:textColor="@color/player_black"
                android:textColorHint="@color/player_black"
                android:textSize="@dimen/t_32" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:layout_marginLeft="@dimen/a_20"
            android:layout_marginRight="@dimen/a_20"
            android:background="@color/player_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/player_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/a_14"
                android:text="@string/pwd"
                android:textSize="@dimen/t_32" />

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawablePadding="@dimen/a_30"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-\/:;()$@\\.,?!'_。《》？|、+~#%=*^&amp;"
                android:hint=""
                android:inputType="textPassword"
                android:padding="@dimen/a_10"
                android:textColor="@color/player_black"
                android:textColorHint="@color/player_black"
                android:textSize="@dimen/t_32"

                />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_50"
        android:background="@drawable/shipe_btn_blue"
        android:text="@string/login"
        android:textColor="@color/player_white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_10">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/a_14"
            android:text="@string/register_new"
            android:textColor="@color/color_cccccc"
            android:textSize="@dimen/t_26" />

        <TextView
            android:id="@+id/tv_tourist_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/a_14"
            android:text="@string/tourist"
            android:textColor="@color/color_cccccc"
            android:textSize="@dimen/t_26" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/a_14"
            android:text="@string/forget_pwd_"
            android:textColor="@color/color_cccccc"
            android:textSize="@dimen/t_26" />

    </RelativeLayout>

</LinearLayout>
