<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_20"
        android:layout_marginRight="@dimen/a_20"
        android:layout_marginTop="@dimen/a_20"
        android:alpha="0.8"
        android:background="@drawable/shipe_layout_tra"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/a_20"
            android:text="@string/password_retrieval"
            android:textSize="@dimen/t_32" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_item_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/a_20"
            android:text="@string/sms_login"
            android:textSize="@dimen/t_32" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/a_20"
        android:layout_marginRight="@dimen/a_20"
        android:layout_marginTop="@dimen/a_20"
        android:background="@drawable/shipe_layout_tra"
        android:gravity="center"
        android:padding="@dimen/a_20"
        android:text="@string/cancel"
        android:textSize="@dimen/t_32" />
</LinearLayout>
