<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title_forget"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_110" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:layout_marginTop="@dimen/a_20"
        android:background="@color/player_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/a_30"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/t_32" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/a_20"
                android:gravity="center_vertical"

                android:textColor="@color/player_black"
                android:textColorHint="@color/player_black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:layout_marginLeft="@dimen/a_30"
            android:background="@color/hn_e5e5e5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:background="@color/player_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/a_30"
            android:gravity="center_vertical"
            android:text="@string/verification_code"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/t_32" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/a_20"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/player_black"
            android:textColorHint="@color/player_black" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="@dimen/a_200"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/a_30"
            android:gravity="center"
            android:text="@string/query_code"
            android:textColor="@color/color_0065b2"
            android:textSize="@dimen/t_30" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:layout_marginTop="@dimen/a_20"
        android:background="@color/player_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/a_30"
                android:gravity="center_vertical"
                android:text="@string/pwd"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/t_32" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/a_20"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textColor="@color/player_black"
                android:textColorHint="@color/player_black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:layout_marginLeft="@dimen/a_30"
            android:background="@color/hn_e5e5e5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:background="@color/player_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/a_30"
            android:gravity="center_vertical"
            android:text="@string/confirm_pwd"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/t_32" />

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/a_20"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:textColor="@color/player_black"
            android:textColorHint="@color/player_black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_50"
        android:background="@drawable/shipe_btn_blue"
        android:text="@string/reset_pwd"
        android:textColor="@color/player_white" />


</LinearLayout>
