<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:layout_marginTop="@dimen/a_20"
        android:background="@color/player_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/a_20"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/a_30"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/country_region"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/t_32" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/a_20"
                android:drawablePadding="@dimen/a_20"
                android:drawableRight="@mipmap/arrow_personal_icon"
                android:gravity="center_vertical"
                android:text=""
                android:textSize="@dimen/t_32" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:layout_marginLeft="@dimen/a_30"
            android:background="@color/hn_e5e5e5" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:background="@color/player_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/a_30"
                android:gravity="center_vertical"
                android:text="@string/phone_number"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/t_32" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/a_30"
                android:gravity="center_vertical"
                android:text="+86"
                android:textColor="@color/color_0065b2"
                android:textSize="@dimen/t_32" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="@dimen/a_20"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/a_20"
                android:textColor="@color/player_black"
                android:textColorHint="@color/player_black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/a_1"
            android:layout_marginLeft="@dimen/a_30"
            android:background="@color/hn_e5e5e5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/a_100"
        android:background="@color/player_white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/a_30"
            android:gravity="center_vertical"
            android:text="@string/verification_code"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/t_32" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="@dimen/a_20"
            android:gravity="center_vertical"
            android:textColor="@color/player_black"
            android:textColorHint="@color/player_black" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="@dimen/a_200"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/a_30"
            android:gravity="center"
            android:text="@string/query_code"
            android:textColor="@color/color_0065b2"
            android:textSize="@dimen/t_30" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/a_40"
        android:layout_marginRight="@dimen/a_40"
        android:layout_marginTop="@dimen/a_50"
        android:background="@drawable/shipe_btn_blue"
        android:text="@string/submit"
        android:textColor="@color/player_white" />

</LinearLayout>
